[workspace]
members = [
    "ooniprobe",
    "ooniprobe-core",
    "ooniprobe-services",
    # "ooniprobe-userauth",
    "ooniprobe-network",
    #"ooniprobe-experiments",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ooniprobe-core = { version = "0.1.0", path = "./ooniprobe-core" }
ooniprobe-experiments = { version = "0.1.0", path = "./ooniprobe-experiments" }
ooniprobe-services = { version = "0.1.0", path = "./ooniprobe-services" }
ooniprobe-userauth = {version = "0.1.0", path= "./ooniprobe-userauth"}
rand = "0.8.5" 
bincode = "1"
thiserror = "2.0.12"
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.133"
serde_derive = "1.0"
rustls = { version = "0.23.37", features = ["ring"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-rustls = "0.26.4"
webpki-roots = "1.0.6"
hickory-resolver = "0.25.2"
hickory-proto = "0.25.2"
url = "2.5.4"
bytes = "1.9.0"
http-body-util = "0.1.3"
http = "1.4.0"
pin-project = "1"
jni = "0.21.1"
hyper-util = { version = "0.1.20", features = ["http1", "http2", "tokio"] }
hyper = { version = "1.9.0", features = ["client"] }
rquest = "2.0.0"
quanta = "0.12.4"
base64 = "0.22.1"
mime = "0.3.17"
encoding_rs = "0.8.35"
hex = "0.4.3"
time = { version = "0.3", features = ["std"] }
cmz = {  version = "0.1.0" }
curve25519-dalek = { version = "4", features = ["digest", "group", "rand_core", "serde"] }
