[workspace]
members = [
    "ooniprobe-services",
    "ooniprobe-ffi",
    "uniffi-bindgen",
    "cbindgen-gen"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ooniprobe-experiments = { version = "0.1.0", path = "./ooniprobe-experiments" }
ooniprobe-services = { version = "0.1.0", path = "./ooniprobe-services" }
ooniauth-core = { git = "https://github.com/ooni/userauth" }
rand = "0.8.5" 
bincode = "1"
thiserror = "2.0.12"
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.133"
serde_derive = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
bytes = "1.9.0"
http-body-util = "0.1.2"
http = "1.2.0"
pin-project = "1"
jni = "0.21.1"
hyper-util = { version = "0.1.10", features = ["http1", "http2", "tokio"] }
hyper = { version = "1.5.2", features = ["client"] }
wreq = { version = "6.0.0-rc.28", features = ["webpki-roots", "query"] }
wreq-util = "3.0.0-rc.10"
webpki-root-certs = "1.0.6"
reqwest = { version = "0.13", features = ["query"] }
quanta = "0.12.4"
base64 = "0.22.1"
mime = "0.3.17"
encoding_rs = "0.8.35"
hex = "0.4.3"
time = { version = "0.3", features = ["std"] }
cmz = { version = "0.2" }
curve25519-dalek = { version = "4", features = ["digest", "group", "rand_core", "serde"] }
sha2 = "0.10.9"
