[package]
name = "ooniprobe-experiments"
version = "0.1.0"
edition = "2021"

[dependencies]

ooniprobe-network = { path = "../ooniprobe-network" }
chrono = {workspace = true}
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = {workspace = true}
tokio-rustls = {workspace = true}
http = {workspace = true}
http-body-util = {workspace = true}
thiserror = {workspace = true}
