[package]
name = "ooniprobe-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "uniffi_ooniprobe"

[dependencies]
uniffi = { version = "0.28", features = ["tokio"] }
ooniauth-core = { git = "https://github.com/ooni/userauth", rev = "9a0b827ba2f41b7a9fb456329e1fc5e97d2086b2" }
cmz = {workspace = true}
postcard = { version = "1", features = ["alloc"] }
sha2 = "0.10.9"
ooniprobe-services = { path = "../ooniprobe-services" }
hex = {workspace = true}
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace =  true }
rquest = { workspace = true }
mime = {workspace =  true }
encoding_rs = {workspace = true }
bytes = {workspace = true }
base64 = {workspace = true }
tokio = { workspace = true }
curve25519-dalek = { version = "4", features = ["digest", "group", "rand_core", "serde"] }
rand = { workspace = true }
time = { workspace = true }
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
