[package]
name = "ooniprobe-helpers"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
env_logger = "0.11.8"
hyper.workspace = true
log = "0.4.27"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
http-body-util = "0.1"
hyper-util.workspace = true
anyhow = "1.0.98"


