[package]
name = "ooniprobe-network"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
pin-project= {workspace = true}
rustls = "0.23.37"
