[package]
name = "ooniprobe-network"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = {workspace = true}
bytes = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tokio-rustls = {workspace = true}
pin-project= {workspace = true}
rustls = {workspace = true}
webpki-roots = {workspace = true}
hickory-resolver = {workspace = true, features = ["tokio"]}
hickory-proto = {workspace = true}
http = {workspace = true}
http-body-util = {workspace = true}
hyper = {workspace = true}
hyper-util = {workspace = true}
rand = {workspace = true}
url = {workspace = true}
