[package]
name = "ooniprobe-services"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rquest = { workspace = true }
http = { workspace = true }
mime = { workspace = true }
url = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
encoding_rs = { workspace = true }
hickory-resolver = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
