[package]
name = "ooniprobe-services"
version = { workspace = true }
edition = { workspace = true }

[features]
jni-bindings = ["jni"]

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
jni = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
wreq = { workspace = true }
wreq-util = { workspace = true }
http = { workspace = true }
mime = { workspace = true }
url = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
encoding_rs = { workspace = true }
