[package]
name = "ooniprobe-userauth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ooniauth-core = { path = "../include/userauth/ooniauth-core" }
ooniprobe-services = { path = "../ooniprobe-services" }
serde = { workspace = true }
serde_json = { workspace =  true }
rquest = { workspace = true }
mime = {workspace =  true }
encoding_rs = {workspace = true }
bytes = {workspace = true }
base64 = {workspace = true }
tokio = { workspace = true }
