[package]
name = "ooniprobe-userauth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
ooniauth-core = { git = "https://github.com/ooni/userauth" }
ooniprobe-services = { path = "../ooniprobe-services" }
hex = {workspace = true}
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace =  true }
rquest = { workspace = true }
mime = {workspace =  true }
encoding_rs = {workspace = true }
bytes = {workspace = true }
base64 = {workspace = true }
tokio = { workspace = true }
curve25519-dalek = { workspace = true }
rand = { workspace = true }
time = { workspace = true }
