[package]
name = "ooniprobe"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate_type = ["cdylib"]

[dependencies]
jni = { workspace = true }
serde = { workspace = true }
rquest = { workspace = true }
serde_json = { workspace = true }
ooniprobe-services = { path = "../ooniprobe-services" }
