[package]
name = "ooniprobe"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
jni = { workspace = true }
serde = { workspace = true }
rquest = { workspace = true }
serde_json = { workspace = true }
ooniprobe-services = { path = "../ooniprobe-services" }
